2017-05-24  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Bump version to 3.1.2.

2017-05-24  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (url-http-response-status): Add defvar.
	(soap-fetch-xml-from-url): Remove special declaration of
	url-http-response-status.
	(soap-invoke-internal): Likewise.

2017-05-24  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Require cl-lib version 0.6.1.

2017-05-24  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el, soap-inspect.el: Update copyright year to 2017.

2017-05-24  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-element): Remove progn.
	(soap-xs-add-union): Wrap long line.

2017-05-24  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el, soap-inspect.el: Merge emacs.git whitespace
	changes to eliminate tabs.

2017-05-24  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-inspect.el: replaced cl library with cl-lib, case replaced
	with cl-case, destructuring-bind with cl-destructuring-bind and
	loop with cl-loop

	* soap-client.el: replaced cl library with cl-lib. defstruct
	replaced with cl-defstruct, assert with cl-assert, case with
	cl-case, ecase with cl-ecase, loop with cl-loop and
	destructuring-bind with cl-destructuring-bind.

2016-03-16  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el (soap-inspect-xs-attribute): Fix checkdoc error.
	(soap-inspect-xs-attribute-group): Likewise.

2016-03-16  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Bump version to 3.1.1.

2016-03-16  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-complex-type): Fix error message.
	(soap-find-port): Delete trailing whitespace.
	(soap-find-operation): Fix documentation and rename parameter.
	(soap-find-port): Likewise.
	(soap-operation-arity): Likewise.

2016-03-16  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Bump version to 3.1.0.
